--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./img/Sliders/Slider1.jpg" class="d-block w-100" alt="toros1">
+                <img src="./img/Sliders/Slider1-min.jpg" class="d-block w-100" alt="toros1">
                 <div class="carousel-caption d-none d-md-block">
                     <h3 class=" h1">100% Black Angus</h3>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./img/Sliders/Slider5.jpg" class="d-block w-100" alt="toros2">
+                <img src="./img/Sliders/Slider5-min.jpg" class="d-block w-100" alt="toros2">
                 <div class="carousel-caption d-none d-md-block">
                     <h3 class="h1">Animales criados sin hormonas ni antibióticos</h3>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./img/Sliders/Slider3.jpg" class="d-block w-100" alt="toros3">
+                <img src="./img/Sliders/Slider3-min.jpg" class="d-block w-100" alt="toros3">
                 <div class="carousel-caption d-none d-md-block">
                     <h3 class="h1">100% Grassfed</h3>
 
