--- a/pag/Productos.html
+++ b/pag/Productos.html
@@ -111,7 +111,45 @@
         </div>
 
     </div>
-
+    <br>
+    <div class="container card-group text-center">
+        <div class="card" style="width: 18rem;">
+            <img src="../img/productos/goulash.png" class="card-img-top " alt="Goulash">
+            <div class="card-body">
+                <h5 class="card-text">Goulash</h5>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="../img/productos/molida.png" class="card-img-top" alt="Carne Molida">
+            <div class="card-body">
+                <h5 class="card-text">Carne Molida</h5>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="..//img/productos/ny.png" class="card-img-top" alt="New York">
+            <div class="card-body">
+                <h5 class="card-text">New York</h5>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="..//img/productos/porterhouse.png" class="card-img-top" alt="Porterhouse">
+            <div class="card-body">
+                <h5 class="card-text">Porterhouse</h5>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="../img/productos/ribeye.png" class="card-img-top" alt="Ribeye">
+            <div class="card-body">
+                <h5 class="card-text">Ribeye</h5>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="../img/productos/vacio.png" class="card-img-top" alt="Vacío">
+            <div class="card-body">
+                <h5 class="card-text">Vacío</h5>
+            </div>
+        </div>
+    </div>
     <br><br>
 
 
