--- a/pag/cobertura.html
+++ b/pag/cobertura.html
@@ -36,49 +36,12 @@
         </nav>
     </div>
     <hr><br><br>
-    <div class="container contact">
-        <div class="row">
-            <div class="col-md-3">
-                <div class="contact-info">
-                    <h2>Contáctanos</h2>
-                    <h4>Nos encantaría saber de ti !</h4>
-                </div>
-            </div>
-            <div class="col-md-9">
-                <div class="contact-form">
-                    <div class="form-group">
-                        <label class="control-label col-sm-2" for="fname">Nombre:</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="fname" placeholder="Ingrese su nombre" name="fname">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-2" for="lname">Apellido:</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="lname" placeholder="Ingrese su apellido" name="lname">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-2" for="email">Email:</label>
-                        <div class="col-sm-10">
-                            <input type="email" class="form-control" id="email" placeholder="Ingrese su email" name="email">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-2" for="Comentarios">Comentarios:</label>
-                        <div class="col-sm-10">
-                            <textarea class="form-control" rows="5" id="comment"></textarea>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-default">Enviar</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="text-center">
+        <h2>Nuestra Cobertura</h2>
+        <p>Por favor revisa si tu lugar de envío se encuentra dentro de nuestra zona de domicilios. Si no lo está, no te preocupes. Comunícate con la tienda al 601.601.9815 para coordinar el despacho.</p>
+    </div>
+    <div class="container mapa ">
+        <iframe src="https://www.google.com/maps/d/u/1/embed?mid=1xxP2M0JtS0TA-e7rxqepfMZQXZ9JNpR0" width="500px" height="500px"></iframe>
     </div>
     <br> <br>
     <div class="text-center">
