--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                         <a class="nav-link" href="./pag/Precios.html">Precios</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="./pag/cobertura.html">Cobertura</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="./pag/Contacto.html">Contacto</a>
                     </li>
                 </ul>
