--- a/pag/Precios.html
+++ b/pag/Precios.html
@@ -26,6 +26,9 @@
                         <a class="nav-link" href="./Precios.html">Precios</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="../pag/cobertura.html">Cobertura</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="./Contacto.html">Contacto</a>
                     </li>
                 </ul>
