--- a/pag/cobertura.html
+++ b/pag/cobertura.html
@@ -36,17 +36,20 @@
         </nav>
     </div>
     <hr><br><br>
-    <div class="text-center">
-        <h2>Nuestra Cobertura</h2>
-        <p>Por favor revisa si tu lugar de envío se encuentra dentro de nuestra zona de domicilios. Si no lo está, no te preocupes. Comunícate con la tienda al 601.601.9815 para coordinar el despacho.</p>
-    </div>
-    <div class="container mapa ">
-        <iframe src="https://www.google.com/maps/d/u/1/embed?mid=1xxP2M0JtS0TA-e7rxqepfMZQXZ9JNpR0" width="500px" height="500px"></iframe>
-    </div>
-    <br> <br>
-    <div class="text-center">
-        <p>Nos dedicamos con obsesión y pasión a producir la mejor carne de Angus de Colombia</p>
-    </div>
+    <div class="container">
+
+        <div class="text-center">
+            <h2>Nuestra Cobertura</h2>
+            <p>Por favor revisa si tu lugar de envío se encuentra dentro de nuestra zona de domicilios. Si no lo está, no te preocupes. Comunícate con la tienda al 601.601.9815 para coordinar el despacho.</p>
+        </div>
+        <br>
+        <div class="container mapa ">
+            <iframe src="https://www.google.com/maps/d/u/1/embed?mid=1xxP2M0JtS0TA-e7rxqepfMZQXZ9JNpR0" width="500px" height="500px"></iframe>
+        </div>
+        <br> <br>
+        <div class="text-center">
+            <p>Nos dedicamos con obsesión y pasión a producir la mejor carne de Angus de Colombia</p>
+        </div>
     </div>
     <div class="container">
         <footer class="py-3 my-4">
